[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 188.908
margin_top = 62.6802
margin_right = 850.908
margin_bottom = 536.68
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseShip" type="OptionButton" parent="Panel"]
margin_left = 505.471
margin_top = 440.78
margin_right = 563.471
margin_bottom = 460.78
text = "Ship"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -39.9153
margin_top = 29.2778
margin_right = 40.0847
margin_bottom = 43.2778
text = "GAME NAME"

[node name="TeamLabel1" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 186.244
margin_top = 49.4442
margin_right = 266.244
margin_bottom = 63.4442
text = "BLUE"

[node name="TeamLabel0" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -255.756
margin_top = 49.4442
margin_right = -175.756
margin_bottom = 63.4442
text = "RED"

[node name="TeamZero" type="VBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -1.41422
margin_top = -161.5
margin_right = 261.586
margin_bottom = 161.5

[node name="TeamOne" type="VBoxContainer" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -263.0
margin_top = -160.311
margin_bottom = 162.689

[node name="ChooseTeam" type="OptionButton" parent="Panel"]
margin_left = 278.274
margin_top = 440.007
margin_right = 342.274
margin_bottom = 460.007
text = "Team"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave" type="Button" parent="Panel"]
margin_left = 68.974
margin_top = 442.385
margin_right = 122.974
margin_bottom = 462.385
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countdown_progress" type="Node2D" parent="Panel"]
visible = false
position = Vector2( -188.908, -62.6802 )

[node name="Label" type="Label" parent="Panel/countdown_progress"]
margin_left = 450.709
margin_top = 466.169
margin_right = 540.709
margin_bottom = 497.169
text = "Game Starting
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Panel/countdown_progress"]
margin_left = 370.84
margin_top = 479.82
margin_right = 624.84
margin_bottom = 493.82
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Panel/countdown_progress"]
[connection signal="item_selected" from="Panel/ChooseShip" to="." method="_on_ChooseShip_item_selected"]
[connection signal="item_selected" from="Panel/ChooseTeam" to="." method="_on_ChooseTeam_item_selected"]
[connection signal="pressed" from="Panel/Leave" to="." method="_on_Leave_pressed"]
[connection signal="timeout" from="Panel/countdown_progress/Timer" to="." method="_on_countdown_progress_timeout"]
